--- a/Terometr/UserElements/PlayerBarElement.xaml
+++ b/Terometr/UserElements/PlayerBarElement.xaml
@@ -10,7 +10,7 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/TeraApi;component/Themes/ElementsStyle.xaml" />
+                <ResourceDictionary Source="/Terometr;component/Themes/ElementsStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
