--- a/Terometr/Windows/MainWindow.xaml
+++ b/Terometr/Windows/MainWindow.xaml
@@ -1,8 +1,101 @@
 ﻿<Window x:Class="Detrav.Terometr.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Height="300"
+        Width="300"
+        Style="{DynamicResource MainWindowStyle}"
+        Closing="Window_Closing"
+        StateChanged="Window_StateChanged"
+        Topmost="True"
+        ShowInTaskbar="False"
+        Title = "Terometr - Дпс метр">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Terometr;component/Themes/MainWindowStyle.xaml" />
+                <ResourceDictionary Source="/Terometr;component/Themes/ElementsStyle.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="16" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <DockPanel Background="{StaticResource TitleColor}"
+                   Grid.Row="0">
+            <Label Foreground="{StaticResource ResourceKey=TextColor}"
+                   FontFamily="Comic Sans MS"
+                   Margin="0"
+                   Padding="0"
+                   DockPanel.Dock="Left"
+                   Content="{Binding Title,RelativeSource={RelativeSource FindAncestor,AncestorType=Window}}" />
+            <Button x:Name="buttonHide"
+                HorizontalAlignment="Right"
+                    DockPanel.Dock="Right"
+                    Style="{StaticResource TitleButtonStyle}"
+                    ToolTip="Свернуть | Развернуть"
+                    Click="buttonHide_Click">
+                <Image Source="pack://application:,,,/Terometr;component/assets/images/Bottom.png"
+                       Margin="0" />
+            </Button>
+            <Button HorizontalAlignment="Right"
+                    DockPanel.Dock="Right"
+                    Style="{StaticResource TitleButtonStyle}"
+                    ToolTip="Нашли баг?">
+                <Image Source="pack://application:,,,/Terometr;component/assets/images/Info.png"
+                       Margin="0" />
+            </Button>
+            <Button HorizontalAlignment="Right"
+                    DockPanel.Dock="Right"
+                    Style="{StaticResource TitleButtonStyle}"
+                    ToolTip="Далее">
+                <Image Source="pack://application:,,,/Terometr;component/assets/images/Forward.png"
+                       Margin="0" />
+            </Button>
+            <Button HorizontalAlignment="Right"
+                    DockPanel.Dock="Right"
+                    Style="{StaticResource TitleButtonStyle}"
+                    ToolTip="Назад">
+                <Image Source="pack://application:,,,/Terometr;component/assets/images/Back.png"
+                       Margin="0" />
+            </Button>
+            <Button HorizontalAlignment="Right"
+                    DockPanel.Dock="Right"
+                    Style="{StaticResource TitleButtonStyle}"
+                    ToolTip="Очистить">
+                <Image Source="pack://application:,,,/Terometr;component/assets/images/New.png"
+                       Margin="0" />
+            </Button>
+            <Button HorizontalAlignment="Right"
+                    DockPanel.Dock="Right"
+                    Style="{StaticResource TitleButtonStyle}"
+                    ToolTip="Написать в час">
+                <Image Source="pack://application:,,,/Terometr;component/assets/images/Bubble.png"
+                       Margin="0" />
+            </Button>
+        </DockPanel>
+        <Grid Grid.Row="1">
+            <TabControl x:Name="tabControl"
+                        Style="{DynamicResource tabControlStyle}">
+                <TabItem Header="ДПС">
+                    <ListBox x:Name="listBoxDps"></ListBox>
+                </TabItem>
+                <TabItem Header="ХПС">
+                    <ListBox x:Name="listBoxHps"></ListBox>
+                </TabItem>
+                <TabItem Header="Получено урона">
+                    <ListBox x:Name="listBoxDTps"></ListBox>
+                </TabItem>
+                <TabItem Header="Получено хила">
+                    <ListBox x:Name="listBoxHTps"></ListBox>
+                </TabItem>
+                <TabItem Header="Настройки">
+                    <ListBox x:Name="Settings">
+                        <CheckBox FontFamily="Comic Sans MS" Foreground="White">Тестовая настройка</CheckBox>
+                    </ListBox>
+                </TabItem>
+            </TabControl>
+        </Grid>
     </Grid>
 </Window>
