--- a/Terometr/Themes/DataGridStyle.xaml
+++ b/Terometr/Themes/DataGridStyle.xaml
@@ -26,21 +26,27 @@
     </Style>
     <Style TargetType="{x:Type DataGridRow}">
         <Setter Property="Background"
-                Value="LightYellow" />
-        <Setter Property="Validation.ErrorTemplate"
-                Value="{x:Null}" />
+                Value="Transparent" />
+        <Setter Property="BorderThickness"
+                Value="0" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type DataGridRow}">
-                    <TextBlock Width="Auto"
-                               VerticalAlignment="Stretch"
-                               HorizontalAlignment="Stretch"
-                               TextAlignment="Right"
-                               Background="Transparent"
-                               FontFamily="Comic Sans MS"
-                               Foreground="White"
-                               Margin="2 0">
-                        <ContentPresenter /></TextBlock>
+                    <DataGridCellsPresenter BorderBrush="Transparent" />
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style TargetType="{x:Type DataGridCell}">
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="FontFamily"
+                Value="Comic Sans MS" />
+        <Setter Property="HorizontalContentAlignment"
+                Value="Right" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type DataGridCell}">
+                        <ContentPresenter />
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
