Первый шаг к новому движку

--- a/Terometr/Windows/MainWindow.xaml
+++ b/Terometr/Windows/MainWindow.xaml
@@ -92,73 +92,8 @@
             <TabControl x:Name="tabControl"
                         Style="{DynamicResource tabControlStyle}"
                         SelectionChanged="tabControl_SelectionChanged">
-                <TabItem Header="УВС">
-                    <UserElements:ListBoxBars x:Name="listDps" />
-                </TabItem>
                 <TabItem Header="Урон">
-                    <UserElements:ListBoxBars x:Name="listDamage" />
-                </TabItem>
-                <TabItem Header="ЛВС">
-                    <UserElements:ListBoxBars x:Name="listHps" />
-                </TabItem>
-                <TabItem Header="Лечение">
-                    <UserElements:ListBoxBars x:Name="listHeal" />
-                </TabItem>
-                <TabItem Header="Пол. урона">
-                    <UserElements:ListBoxBars x:Name="listDamageTaken" />
-                </TabItem>
-                <TabItem Header="Пол. леч.">
-                    <UserElements:ListBoxBars x:Name="listHealTaken" />
-                </TabItem>
-                <TabItem Header="Суммарно">
-                    <DataGrid x:Name="dataGrid"
-                              BorderBrush="Transparent"
-                              Margin="0"
-                              CanUserAddRows="False"
-                              CanUserDeleteRows="False"
-                              CanUserSortColumns="True"
-                              IsReadOnly="True"
-                              AutoGenerateColumns="False"
-                              VerticalAlignment="Stretch"
-                              SelectionMode="Single"
-                              Background="Transparent"
-                              RowBackground="Transparent"
-                              ScrollViewer.HorizontalScrollBarVisibility="Hidden"
-                              ScrollViewer.VerticalScrollBarVisibility="Visible"
-                              GridLinesVisibility="None">
-                        <DataGrid.Columns>
-                            <DataGridTemplateColumn Header="C">
-                                <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <Image Width="16"
-                                               Height="16"
-                                               Source="{Binding image}" />
-                                    </DataTemplate>
-                                </DataGridTemplateColumn.CellTemplate>
-                            </DataGridTemplateColumn>
-                            <DataGridTextColumn Header="Имя"
-                                                Width="Auto"
-                                                Binding="{Binding name}" />
-                            <DataGridTextColumn Header="УВС"
-                                                Width="Auto"
-                                                Binding="{Binding dps}" />
-                            <DataGridTextColumn Header="Урон"
-                                                Width="Auto"
-                                                Binding="{Binding damage}" />
-                            <DataGridTextColumn Header="ЛВС"
-                                                Width="Auto"
-                                                Binding="{Binding hps}" />
-                            <DataGridTextColumn Header="Лечение"
-                                                Width="Auto"
-                                                Binding="{Binding heal}" />
-                            <DataGridTextColumn Header="Пол. урона"
-                                                Width="Auto"
-                                                Binding="{Binding damageTaken}" />
-                            <DataGridTextColumn Header="Пол. леч."
-                                                Width="Auto"
-                                                Binding="{Binding healTaken}" />
-                        </DataGrid.Columns>
-                    </DataGrid>
+                    <UserElements:DamageUserControl x:Name="listDamage" />
                 </TabItem>
                 <TabItem Header="Настройки">
                     <ListBox x:Name="Settings">
