--- a/Terometr/UserElements/DamageUserControl.xaml
+++ b/Terometr/UserElements/DamageUserControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Detrav.Terometr.UserElements.ListBoxBars"
+﻿<UserControl x:Class="Detrav.Terometr.UserElements.DamageUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,7 +12,20 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <ListBox x:Name="listBox">
-        
-    </ListBox>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="16" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <ComboBox Grid.Column="0" />
+            <CheckBox Grid.Column="1" ToolTip="В секунду?" />
+        </Grid>
+        <ListBox Grid.Row="1"
+                 x:Name="listBox" />
+    </Grid>
 </UserControl>
