--- a/Terometr/UserElements/DamageUserControl.xaml
+++ b/Terometr/UserElements/DamageUserControl.xaml
@@ -22,7 +22,7 @@
                 <ColumnDefinition />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <ComboBox x:Name="comboBox" Grid.Column="0" />
+            <ComboBox x:Name="comboBox" Grid.Column="0" Padding="0" />
             <CheckBox x:Name="checkBox" Grid.Column="1" ToolTip="В секунду?" />
         </Grid>
         <ListBox Grid.Row="1"
