Сделал до того же уровня как раньше

--- a/Terometr/Windows/MainWindow.xaml
+++ b/Terometr/Windows/MainWindow.xaml
@@ -97,6 +97,7 @@
                 </TabItem>
                 <TabItem Header="Настройки">
                     <ListBox x:Name="listBoxSettings">
+                        <Label FontFamily="Comic Sans MS" Foreground="White">Настройки не работают</Label>
                         <CheckBox x:Name="checkBoxGrouped"
                                   FontFamily="Comic Sans MS"
                                   Foreground="White"
