Убрал агро, сделал без показателей, теперь просто измеряется активность ДПС

--- a/Terometr/Windows/MainWindow.xaml
+++ b/Terometr/Windows/MainWindow.xaml
@@ -104,7 +104,7 @@
                 <TabItem Header="Получ. леч.">
                     <UserElements:HealTakenUserControl />
                 </TabItem>
-                <TabItem Header="Агро">
+                <TabItem Header="Агро нераб.">
                     <UserElements:AgroUserControl />
                 </TabItem>
                 <TabItem Header="Настройки">
